--- a/Projeto_Aula1_David/src/main/java/NewJFrame.form
+++ b/Projeto_Aula1_David/src/main/java/NewJFrame.form
@@ -48,15 +48,17 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
+              <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="204" max="-2" attributes="0"/>
-                      <Component id="label1" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
+                  <Component id="button1" alignment="0" min="-2" pref="128" max="-2" attributes="0"/>
+                  <Component id="label12" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="label2" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="-2" pref="152" max="-2" attributes="0"/>
+                              <Component id="label1" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Component id="label2" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="label3" alignment="0" min="-2" pref="99" max="-2" attributes="0"/>
                           <Component id="label4" alignment="0" min="-2" pref="98" max="-2" attributes="0"/>
                           <Component id="label7" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -65,7 +67,6 @@
                           <Component id="label11" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="textArea2" alignment="0" min="-2" pref="184" max="-2" attributes="0"/>
                           <Component id="textField2" alignment="0" min="-2" pref="166" max="-2" attributes="0"/>
-                          <Component id="label12" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="label8" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" max="-2" attributes="0"/>
@@ -79,7 +80,6 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="checkbox5" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="button1" alignment="0" min="-2" pref="128" max="-2" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="label5" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
@@ -90,10 +90,10 @@
                               <Component id="checkbox2" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="textArea1" min="-2" pref="238" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="27" max="32767" attributes="0"/>
-              <Component id="textArea1" min="-2" pref="238" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -101,6 +101,7 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
+              <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <Component id="label1" min="-2" pref="31" max="-2" attributes="0"/>
@@ -143,13 +144,13 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="textField2" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="textArea1" alignment="0" min="-2" pref="437" max="-2" attributes="0"/>
+                  <Component id="textArea1" min="-2" pref="437" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
-              <Component id="label12" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+              <Component id="label12" min="-2" pref="36" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="button1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="0" pref="84" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="9" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -355,6 +356,10 @@
       </Properties>
     </Component>
     <Component class="java.awt.TextField" name="textField2">
+      <Properties>
+        <Property name="name" type="java.lang.String" value="" noResource="true"/>
+        <Property name="text" type="java.lang.String" value="00/00/0000"/>
+      </Properties>
     </Component>
     <Component class="java.awt.Label" name="label12">
       <Properties>
